src/objects/FC_Billing_Instruction_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Check_Payment_Method_Zuora_ID__c</fullName>
        <label>Check Payment Method Zuora ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Billing_Instruction_Template_ID__c</fullName>
        <label>Default Billing Instruction Template ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Product_Rate_Plan_ID__c</fullName>
        <label>Discount Product Rate Plan ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>(FC) Billing Instruction Settings</label>
</CustomObject>